// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconBadge /> by default matches with snapshot 1`] = `
<span
  className="sc-bczRLJ hIWYio k-IconBadge k-IconBadge--large k-IconBadge--success k-IconBadge--circle"
  style={
    Object {
      "--iconBadge-background-color": "var(--color-success-500)",
      "--iconBadge-border-color": "var(--color-success-300)",
      "--iconBadge-border-style": null,
      "--iconBadge-border-width": null,
    }
  }
>
  <span>
    <svg />
  </span>
</span>
`;

exports[`<IconBadge /> with border style matches with snapshot 1`] = `
<span
  className="sc-bczRLJ hIWYio k-IconBadge k-IconBadge--small k-IconBadge--info k-IconBadge--star k-IconBadge--hasBorderStyles"
  style={
    Object {
      "--iconBadge-background-color": "var(--color-primary-500)",
      "--iconBadge-border-color": "#e8f7fe",
      "--iconBadge-border-style": "solid",
      "--iconBadge-border-width": "0.125rem",
    }
  }
>
  <span>
    <svg />
  </span>
</span>
`;
